@@ -1,18 +1,19 @@
-use Test::More $] < 5.008 ? (skip_all => "5.6") : (tests => 9);
-use utf8;
+use Test::More $] < 5.008 ? (skip_all => "5.6") : (tests => 11);
 use Cpanel::JSON::XS;
 
 my $json = Cpanel::JSON::XS->new->relaxed;
 
-ok ('[1,2,3]' eq encode_json $json->decode (' [1,2, 3]'));
-ok ('[1,2,4]' eq encode_json $json->decode ('[1,2, 4 , ]'));
+is (encode_json $json->decode (' [1,2, 3]'), '[1,2,3]');
+is (encode_json $json->decode ('[1,2, 4 , ]'), '[1,2,4]');
 ok (!eval { $json->decode ('[1,2, 3,4,,]') });
 ok (!eval { $json->decode ('[,1]') });
 
-ok ('{"1":2}' eq encode_json $json->decode (' {"1":2}'));
-ok ('{"1":2}' eq encode_json $json->decode ('{"1":2,}'));
+is (encode_json $json->decode (' {"1":2}'), '{"1":2}' );
+is (encode_json $json->decode ('{"1":2,}'), '{"1":2}');
+is (encode_json $json->decode (q({'1':2})), '{"1":2}'); # allow_singlequotes
+is (encode_json $json->decode ('{a:2}'),    '{"a":2}'); # allow_barekey
 ok (!eval { $json->decode ('{,}') });
 
-ok ('[1,2]' eq encode_json $json->decode ("[1#,2\n ,2,#  ]  \n\t]"));
+is (encode_json $json->decode ("[1#,2\n ,2,#  ]  \n\t]"), '[1,2]');
 
-ok ('["Hello\tWorld"]' eq encode_json $json->decode ("[\"Hello\tWorld\"]"));
+is (encode_json $json->decode ("[\"Hello\tWorld\"]"), '["Hello\tWorld"]');
